// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    left
  </span>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    top
  </span>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    bottom
  </span>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    right
  </span>
</div>
`;

exports[`Tooltip[Base] should render correctly  2`] = `
<div>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    leftbottom
  </span>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    top
  </span>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    bottom
  </span>
  <noscript />
  <span
    style="font-size: 20px; line-height: 1; margin: 4px;"
  >
    right
  </span>
</div>
`;

exports[`Tooltip[Base] should render correctly  3`] = `
<div>
  <noscript />
  <span
    class="tooltip-target-0-2-8"
    style="cursor: not-allowed;"
  >
    <button
      class="button-default-0-2-13 button-button-0-2-10 button-disabled-0-2-27"
      disabled=""
      style="pointer-events: none;"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
